<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="homeBtn">Details</string>
    <string name="addBtn">Record</string>
    <string name="nameTitle">Category:</string>
    <string name="noteTitle">Note:</string>
    <string name="valueTitle">Price(expense inputs negative):</string>
    <string name="orderIDTitle">OrderID:</string>
    <string name="timeTitle">Time(If not selected,set to the current time):</string>
    <string name="timeTitle2">Time(If not selected,don\'t modify):</string>
    <string name="selectTime">Choose Time</string>
    <string name="Save">Save</string>
    <string name="SaveSuccess">Save Success</string>
    <string name="UpdateSuccess">Modify Success</string>
    <string name="UpdateTip">Currently in modification status, switch tabs to cancel modification</string>
    <string name="Update">Modify</string>
    <string name="emptyMsg">No Message，Click \'Record\' to Record</string>
    <string name="DialogTitle">Warring</string>
    <string name="DialogContent">Do you want to delete？</string>
    <string name="CancleBtn">Cancle</string>
    <string name="OkBtn">OK</string>
    <string name="DeleteSuccess">Delete Success</string>
    <string name="BottomTip">Click the space area to close</string>
    <string name="All">All</string>
    <string name="In">Income</string>
    <string name="Out">Expense</string>
    <string name="TargetTitle">Category:%s</string>
    <string name="NoteTitle">Note:%s</string>
    <string name="TypeTitle">Type:%s</string>
    <string name="PriceTitle">Price:%s</string>
    <string name="OrderIDTitle">OrderID:%s</string>
    <string name="TimeTitle">Time:%s</string>
    <!--ERROR-->
    <string name="TargetCanNotBeEmpty">Category Can not be null!</string>
    <string name="SaveFailed">Save Failed!</string>
</resources>
