<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.accountbook.Fragment.AddFragment"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:paddingRight="20dp">

    <TextView android:id="@+id/nameTitleTxt"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameTitle"/>
    <EditText android:id="@+id/nameEditTxt"
        android:background="@drawable/edit_txt_bg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/nameTitleTxt"
        android:paddingLeft="5dp"/>

    <TextView android:id="@+id/noteTitleTxt"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noteTitle"
        app:layout_constraintTop_toBottomOf="@id/nameEditTxt"
        android:layout_marginTop="10dp"/>
    <EditText android:id="@+id/noteEditTxt"
        android:background="@drawable/edit_txt_bg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/noteTitleTxt"
        android:paddingLeft="5dp"/>

    <TextView android:id="@+id/valueTitleTxt"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valueTitle"
        app:layout_constraintTop_toBottomOf="@id/noteEditTxt"
        android:layout_marginTop="10dp"/>
    <EditText android:id="@+id/valueEditTxt"
        android:background="@drawable/edit_txt_bg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/valueTitleTxt"
        android:paddingLeft="5dp"
        android:inputType="numberSigned"/>

    <TextView android:id="@+id/orderIDTitleTxt"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderIDTitle"
        app:layout_constraintTop_toBottomOf="@id/valueEditTxt"
        android:layout_marginTop="10dp"/>
    <EditText android:id="@+id/orderIDEditTxt"
        android:background="@drawable/edit_txt_bg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/orderIDTitleTxt"
        android:paddingLeft="5dp"/>

    <TextView android:id="@+id/timeTitleTxt"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeTitle"
        app:layout_constraintTop_toBottomOf="@id/orderIDEditTxt"
        android:layout_marginTop="10dp"/>
    <EditText android:id="@+id/timeEditTxt"
        android:background="@drawable/edit_txt_bg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/timeTitleTxt"
        android:paddingLeft="5dp"/>

    <Button android:id="@+id/okBtn"
        android:layout_height="50dp"
        android:layout_width="120dp"
        app:layout_constraintTop_toBottomOf="@id/timeEditTxt"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button"
        android:text="@string/Save"
        android:textSize="25dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>